# isogloss

./: .gitignore  LICENSE  README.md  isogloss.1  isogloss.py  pyproject.toml  region_names.json  setup.py
data/: consolidated_langs.json  deprecated-639-3.csv  region_names.json  script_codes.json
docs/: app.js  bcp-app.js  bcp-index.html  bcp-style.css  consolidated_langs.json  index.html  region_names.json  script_codes.json  style.css
isogloss/: isogloss.py
src/data/: consolidated_langs.json
src/isogloss/: isogloss.py
web/: index.html  style.css
