[project]
name = "isogloss"
version = "1.0.2"
description = "A tool for looking up ISO 639 and IETF language codes"
authors = [
    { name = "underwood (T E Vaughan)", email = "underwood@underwood.network" },
]
dependencies = ["unidecode>=1.3.8", "argparse>=1.4.0"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
]

[project.urls]
Repository = "https://github.com/thunderpoot/isogloss.git"

[project.scripts]
isogloss = "isogloss.isogloss:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/isogloss"]
